--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,19 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f0f0f0;
 }
 
 header {
-    background-color: #007bff;
+    background-color: #ff6b81;
     padding: 20px 0;
 }
-
+.container1 {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
 .container {
     width: 80%;
     margin: 0 auto;
@@ -17,36 +22,44 @@ header {
     justify-content: space-between;
     align-items: center;
 }
-
 .logo {
-    color: #fff;
-    font-size: 24px;
+    color: #4b0082;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 50px;
     font-weight: bold;
 }
 
 nav ul {
     list-style: none;
-    margin: 0;
+    margin: 0; 
+    margin-right: 20%;
     padding: 0;
     display: flex;
+    justify-content: center;
 }
 
 nav ul li {
-    margin-left: 20px;
+    margin-left: 50px;
 }
 
 nav ul li a {
     color: #fff;
+    font-weight: bold;
     text-decoration: none;
-    font-size: 16px;
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+
 }
 
 main {
-    background-color: #fff;
+    background-image: url('images/3.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
     padding: 50px 0;
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100vh;
 }
 
 .content {
@@ -54,34 +67,27 @@ main {
 }
 
 .content h1 {
-    font-size: 36px;
-    color: #333;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 75px;
+    color: #4b0082;
 }
 
 .content p {
-    font-size: 16px;
-    color: #666;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 24px;
+    color: #fff2f7;
     line-height: 1.5;
 }
 
 button {
-    background-color: #007bff;
+    background-color: #ff6b81;
     color: #fff;
     border: none;
     padding: 10px 20px;
-    font-size: 16px;
     cursor: pointer;
+    border-radius: 5px;
 }
 
 button:hover {
-    background-color: #0056b3;
-}
-
-.illustration {
-    width: 50%;
-    text-align: right;
-}
-
-.illustration img {
-    max-width: 100%;
+    background-color: #d8435e;
 }
