--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,8 @@ nav ul li a {
     font-size: 18px;
     color: #fff2f7;
     line-height: 1.5;
+    height: 100px;
+    width: 100px;
 }
 
 .login-button {
